feat(user): add avatar upload functionality and current user retrieval

--- a/backend/.env
+++ b/backend/.env
@@ -4,3 +4,8 @@ ACCESS_TOKEN_SECRET=myNameIsHaklaSharukh
 ACCESS_TOKEN_EXPIRY=30m
 REFRESH_TOKEN_SECRET=hasinacdiawamicdi
 REFRESH_TOKEN_EXPIRY=7d
+
+
+CLOUDINARY_CLOUD_NAME=dshnnv9pc
+CLOUDINARY_API_KEY=752634353327299
+CLOUDINARY_API_SECRET=nfpNGf6bE8-DudNYLgFSNmTl0mQ
